# hw_web_mod11_10

./: .gitignore  README.md  pyproject.toml
hw_10/hw_10/: asgi.py  settings.py  test.py  urls.py  wsgi.py
hw_10/quotes/: __init__.py  admin.py  forms.py  models.py  urls.py  utils.py  views.py
hw_10/quotes/migrations/: 0001_initial.py  0002_alter_author_fullname.py
hw_10/quotes/static/quotes/: style.css
hw_10/quotes/templates/quotes/: aauthor.html  about_author.html  author.html  base.html  index.html  quote.html  ttt.html
hw_10/quotes/templatetags/: extract.py
hw_10/users/: forms.py  urls.py  views.py
hw_10/users/templates/users/: logout.html  password_reset_done.html  sign.html  signin.html
hw_10/utils/: from_mongo_postgres.py
killer_instagram/app_instagram/: urls.py  views.py
killer_instagram/app_instagram/templates/app_instagram/: base.html  index.html
killer_instagram/killer_instagram/: asgi.py  settings.py  wsgi.py
